--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nas-movie-manager-provider-filelist",
-  "version": "0.0.12-alpha",
+  "name": "cine-slinger-plugin-filelist",
+  "version": "0.0.15-alpha",
   "description": "Filelist provider for nas-movie-manager",
   "main": "index.js",
   "type": "module",
@@ -28,14 +28,14 @@
     "@types/bytes": "^3.1.1",
     "@types/node": "^20.1.1",
     "@types/tough-cookie": "^4.0.2",
-    "@types/tough-cookie-file-store": "^2.0.1",
-    "nas-movie-manager-provider-types": "^0.0.11-alpha"
+    "@types/tough-cookie-file-store": "^2.0.1"
   },
   "dependencies": {
     "bytes": "^3.1.2",
     "cheerio": "^1.0.0-rc.12",
     "desm": "^1.3.0",
     "got": "^12.6.0",
+    "nas-movie-manager-provider-types": "^0.1.3-alpha",
     "parse-torrent-title": "^1.3.0",
     "tough-cookie": "^4.1.2",
     "tough-cookie-file-store": "^2.0.3"
